<resources>

    <string name="app_name">QRZar</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_qrzar_main">QRZar</string>
    <string name="facebook">Connect with Facebook</string>
    <string name="welcome">Welcome to QRzar</string>
    <string name="nofacebook">&quot;Don't have Facebook?&quot;</string>
    <string name="rank">Rank</string>
    <string name="play">Play</string>
    <string name="info">Info</string>
    <string name="empty"></string>
    <string name="connection_status">Connection Status</string>
    <string name="game_id">Game ID</string>
    <string name="player_id">Player ID</string>
    <string name="team">Team</string>
    <string name="logo_description">Logo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game_play">GamePlayActivity</string>
    <string name="shoot">Shoot</string>
    <string name="title_activity_new">NewActivity</string>

</resources>