<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
        
    <org.tophat.qrzar.qrscanner.camera.CameraSurface 
	   android:id="@+id/cameraSurface"
	   android:layout_width="match_parent"
	   android:layout_height="match_parent"
	/>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	    
	    <FrameLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1" >
			
			<View 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:id="@+id/previewView"/>
	        <ImageView 
	            android:id="@+id/logo"
	            android:contentDescription="@string/logo_description"
	            android:src="@drawable/logo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	        />
	       
	    </FrameLayout>
	    
	    <ImageView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/logo_description"
	        android:scaleType="fitXY"
	        android:src="@drawable/redbanner" />
	
	    <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom"
	        android:background="@drawable/blue_gradient_background"
	        android:alpha="0.9"
	        android:baselineAligned="false"
	        android:orientation="horizontal"
	        android:paddingTop="10dp" >
	        
	        <FrameLayout 
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="match_parent">
	        	
	        	<LinearLayout
	            	android:orientation="vertical"
	            	android:layout_height="wrap_content"
	            	android:layout_width="wrap_content"
	            	android:layout_gravity="center">
	            	
	            	<Button 
	        	    	android:layout_height="wrap_content" 
	        	    	android:layout_width="wrap_content" 
	        	    	android:background="@drawable/player_ranking_button" 
	        	    	android:text="@string/empty" 
	        	    	android:id="@+id/rank_button" 
	        	    />
	            	
	            		
	               	<TextView
	               	    android:layout_width="fill_parent"
	               	    android:layout_height="wrap_content"
	               	    android:layout_margin="5dp"
	               	    android:gravity="center"
	               	    android:text="@string/rank"
	               	    android:textColor="#aaa6b1"
	               	    android:textSize="20dp" />
	               	
	           	
	       		</LinearLayout>
	       	</FrameLayout>
	        <FrameLayout 
	            android:layout_width="0dp"
	            android:layout_weight="1.2"
	            android:layout_height="match_parent">
	        	
	        	<LinearLayout
	        	    android:baselineAligned="false"
	            	android:orientation="vertical"
	            	android:layout_height="wrap_content"
	            	android:layout_width="wrap_content"
	            	android:layout_gravity="center">
	            	
	            	<Button 
	        	    	android:layout_height="wrap_content" 
	        	    	android:layout_width="wrap_content" 
	        	    	android:background="@drawable/join_button" 
	        	    	android:text="@string/empty" 
	        	    	android:id="@+id/join_button" />
	            	
	                <TextView 
	                	android:textColor="#aaa6b1"
	                	android:layout_margin="5dp" 
	                	android:gravity="center"
	                	android:text="@string/play"
	                	android:layout_width="fill_parent"
	                	android:layout_height="wrap_content" 
	                	android:textSize="20dp"
	           
	                	/>
	            
	        	</LinearLayout>
	        	
	        </FrameLayout>
	        <FrameLayout 
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="match_parent">
	        	
	        	<LinearLayout
	            	android:orientation="vertical"
	            	android:layout_height="wrap_content"
	            	android:layout_width="wrap_content"
	            	android:layout_gravity="center">
	            	
	            	<Button 
	        	    	android:layout_height="wrap_content" 
	        	    	android:layout_width="wrap_content"
	        	    	android:background="@drawable/info_button" 
	        	    	android:text="@string/empty" 
	        	    	android:id="@+id/info_button" 
	        	    	
	        	    />
	            	
	                <TextView
	                	android:layout_width="fill_parent"
	                	android:layout_height="wrap_content"
	                	android:layout_margin="5dp"
	                	android:gravity="center"
	                	android:text="@string/info"
	                	android:textColor="#aaa6b1"
	                	android:textSize="20dp" />
	               
	        	</LinearLayout>
	        	
	        	
	        </FrameLayout>
	    </LinearLayout>
	</LinearLayout>
</FrameLayout>